# simple-local-llm

./: .eslintrc-auto-import.json  1.0.0  README.md  android.sh  android.txt  package-lock.json  package.json  test.py  vite.config.mts  wdio.conf.ts
docs/: index.html  preview.html
docs/tauri-docs/: .rustc_info.json
docs/tauri-docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/tauri-docs/doc/app/: all.html  fn.main.html  index.html
docs/tauri-docs/doc/app_lib/: all.html  fn.initialize_functions.html  fn.run.html  index.html  (+1 more)
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  typed-router.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  pinia.json
src-tauri/src/: function_provider.rs  lib.rs  llamacpp_provider.rs  main.rs  model_provider.rs  ollama_provider.rs
src-tauri/src/commands/: embeddings.rs  prepare_embeddings.rs
src-tauri/src/embeddings/: mod.rs
src-tauri/src/function_providers/: mod.rs  time_provider.rs  web_page_reader.rs
src-tauri/src/model_providers/: llamacpp_provider.rs  mod.rs  ollama_provider.rs
src/components/: AppBar.vue  AppFooter.vue  ChatMessage.vue  FilePreviews.vue  InputMessage.vue  RenameChatDialog.vue  SearchChatDialog.vue  Sidebar.vue
src/layouts/: default.vue  index.vue  initial-setup.vue
src/pages/: [id].vue  index.vue  initial-setup.vue
src/plugins/: index.ts  md-editor-config.ts  vuetify.ts
src/router/: index.ts
src/stores/: app.ts  chat.ts  sidebar.ts
tests/specs/: test.model-chat.spec.js
(+1398 files in other folders)
