[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
llama_cpp = ["llama-cpp-2", "hf-hub"]  # Подключает llama-cpp-2 только если явно включён флаг
ollama = ["reqwest", "futures"] # Подключает ollama только если явно включён флаг

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = "0.1.88"
tauri-plugin-opener = "2"
llama-cpp-2 = { git = "https://github.com/Petr3336/llama-cpp-rs", branch = "android-build-fixes", version = "0.1.102", optional = true, features = [] }
hf-hub = { version = "0.4.2", optional = true }
once_cell = "1.21.1"
tauri-plugin-fs = "2"
